--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,10 +1,10 @@
 * {
   text-align: left;
 }
-.course-container {
+.popular-container {
   display: grid;
   grid-gap: 50px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   border: 2px solid goldenrod;
   padding: 10px;
 }
